--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/light_primary"
+    android:background="@color/primary"
     tools:context=".activity.MainActivity">
 
     <!--    Frame layout for navigation fragment-->
@@ -21,7 +21,7 @@
         android:id="@+id/bottom_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:background="@color/input"
         app:abb_indicatorAppearance="round"
         app:abb_indicatorHeight="6dp"
         app:abb_indicatorLocation="top"
