--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,16 +1,8 @@
 <resources>
     <!-- Base application theme. -->
     <style name="Base.Theme.WorkWithQRCode" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/dark_primary</item>
-        <item name="colorPrimaryVariant">@color/dark_primary_variant</item>
-        <item name="colorOnPrimary">@color/dark_on_primary</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/dark_secondary</item>
-        <item name="colorSecondaryVariant">@color/dark_secondary_variant</item>
-        <item name="colorOnSecondary">@color/dark_on_secondary</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimary</item>
+        <item name="colorPrimary">@color/primary</item>
+        <item name="android:statusBarColor">@color/primary</item>
     </style>
 
     <style name="Theme.WorkWithQRCode" parent="Base.Theme.WorkWithQRCode" />
